# self-learning-console

./: .gitignore  Makefile  pyproject.toml  requirements.txt  test_pdf_metadata.py
.github/workflows/: tests.yml
app/: __init__.py  main.py
app/agents/: __init__.py  critic.py  planner.py  router.py
app/api/routes/: __init__.py  admin.py  admin_ingestion.py  admin_observability.py  admin_retrieval.py  admin_schemas.py  admin_wiki.py  chat.py  health.py
app/api/schemas/: chat.py
app/components/: __init__.py  retrieval.py
app/conversation/session/: store.py
app/core/config/: settings.py
app/core/logging/: logger.py
app/core/observability/: __init__.py  langsmith.py  metrics.py
app/core/prompts/: __init__.py  toon.py
app/core/resilience/: __init__.py  circuit_breaker.py  retry.py
app/evaluation/: service.py
app/feedback/collector/: service.py
app/generation/: pipeline.py
app/ingestion/: chunking.py  lifecycle.py  pipeline.py  readers.py  report.py  vectorstore.py
app/ingestion/pii/: __init__.py  approval.py  detection.py
app/jobs/cleanup/: __init__.py  job.py
app/jobs/deploy_intelligence/: __init__.py  contradiction_detector.py  job.py  wiki_linter.py  wiki_writer.py
app/jobs/ingestion/: __init__.py
app/jobs/reindex/: job.py
app/jobs/seed_questions/: __init__.py
app/jobs/warm_cache/: __init__.py  job.py
app/retrieval/: coordinator.py  index.py  insights.py
app/retrieval/cache/: __init__.py  multilevel.py
app/retrieval/embeddings/: __init__.py  embed.py
app/retrieval/insight/: __init__.py  cache.py  content.py  fallback.py  index.py  llm.py  questions.py
app/retrieval/pipeline/: __init__.py  query_rewrite.py
app/retrieval/pipeline/orchestrators/: __init__.py  llamaindex_orchestrator.py
app/retrieval/search/: __init__.py  lexical.py  vector.py
app/retrieval/service/: __init__.py  acronym.py  cache.py  overview.py  query_intent.py  schemas.py  scoring.py  semantic_cache.py  similarity_tracker.py  synthesis.py  visuals.py
app/retrieval/vectorstore/: qdrant_store.py
app/security/: __init__.py  content_guard.py  input_guard.py  output_guard.py
app/services/: __init__.py  health_service.py  ingestion_service.py
data/indexes/: .ingestion_manifest.json  benchmark_eval_set.json  deploy_intelligence_report.json  feedback_log.json  ingestion_report.json  knowledge_cards.json
infra/docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml
prompts/: prompt_catalog.toon
scripts/: cleanup.sh  healthcheck.sh  migrate.sh  run-precompute-parallel.sh  seed-suggested-questions-all-docs.sh  seed-suggested-questions.sh  seed.sh  watch-status.sh
tests/: test_pdf_metadata.py
tests/unit/: test_data_lifecycle.py  test_deploy_intelligence.py  test_evaluation_benchmark.py  test_health.py  test_prompt_catalog.py  test_readiness_and_cache_ttl.py  test_retrieval_llm_fallback.py  test_wiki_policy.py
training_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ui/react-dashboard/: package-lock.json  package.json  vite.config.js
ui/react-dashboard/src/: App.helpers.test.js  App.jsx  styles.css
ui/react-dashboard/src/components/tabs/: IngestionTab.jsx  ObservabilityTab.jsx  OverviewTab.jsx  RetrievalTab.jsx  WikiTab.jsx
ui/react-dashboard/src/config/: uiText.json
ui/react-dashboard/src/utils/: dashboardUtils.js
